[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Characters/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Characters/Slime.gd" type="Script" id=2]
[ext_resource path="res://Assets/Characters/Slime-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/SFX/SlimeStep.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/SlimeHurt.wav" type="AudioStream" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/hit_color = Color( 1.3, 1.3, 1.3, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 62, 73 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 62, 0, 62, 73 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 124, 0, 62, 73 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 186, 0, 62, 73 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "chase",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "knockback",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 24.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 24.0
height = 8.0

[sub_resource type="AudioStreamRandomPitch" id=11]
audio_stream = ExtResource( 4 )

[node name="Slime" groups=["drownable", "needs_player"] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="Flip" index="0"]
material = SubResource( 2 )
frames = SubResource( 3 )
offset = Vector2( 0, -28 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -16 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="Vision" parent="." index="3"]
collision_mask = 2

[node name="CollisionShape2D" parent="Vision" index="0"]
position = Vector2( 0, -16 )

[node name="VisionCast" parent="." index="4"]
collision_mask = 3

[node name="Hitbox" parent="." index="5"]
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -16 )
rotation = 1.5708
shape = SubResource( 9 )
disabled = true

[node name="StepSFX" type="AudioStreamPlayer2D" parent="." index="8"]
stream = SubResource( 11 )
bus = "SFX"

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource( 5 )
volume_db = 24.0
bus = "SFX"

[connection signal="frame_changed" from="Flip/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
